[project]
name = "luciditycli"
version = "0.1.1"
description = "Simple module for aesthetic CLI interfaces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]
